# fast-api-learning

./: README.md
fast/: main.py  pyproject.toml
fast/users/: routers.py
