[project]
name = "fast"
version = "0.1.0"
description = ""
authors = [
    {name = "amankadam-coditas",email = "aman.kadam@coditas.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]

[tool.poetry]
packages = [{include = "fast", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
